codex-rs/tui/src/tui/snapshots/codex_tui__tui__screen_size__tests__terminal_height_shrink_then_growth_leaves_rows_for_source_reflow.snap
---
source: tui/src/tui/screen_size_tests.rs
expression: terminal.backend().vt100().screen().contents()
---


shell-row-one
shell-row-two
